--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
     "next": "latest",
+    "notion-to-md": "^2.5.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.6",
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
